--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=1083
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+Spring.security.user.name=soma
+Spring.security.user.password=1083
